<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="@drawable/password"
    android:layout_height="fill_parent" 
    android:padding="20dip" 
    android:layout_width="fill_parent">
<RelativeLayout  
	android:id="@+id/RelativeLayout" 
	android:layout_height="fill_parent" 
	android:layout_marginTop="40dip"
	android:layout_width="fill_parent"
	>
	

	
		
<TextView android:id="@+id/TextView01" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
style="@style/textview_style"
android:text="@string/old_password">
</TextView>
<EditText android:layout_below="@id/TextView01" 
android:layout_height="wrap_content" 
android:layout_width="150px" 
android:password="true" 
android:inputType="textPassword"
android:singleLine="true"
android:layout_marginTop="5dip"
android:background="@android:drawable/editbox_background"
android:id="@+id/old_password" >
</EditText>
<TextView android:id="@+id/TextView02" 
android:layout_below="@id/old_password" 
android:layout_width="wrap_content" 

android:layout_marginTop="5dip"
style="@style/textview_style"
android:layout_height="wrap_content" android:text="@string/new_password">
</TextView>
<EditText android:id="@+id/new_password" 
android:layout_below="@id/TextView02" 
android:layout_marginTop="5dip"
android:password="true" 
android:singleLine="true"
android:inputType="textPassword"
android:background="@android:drawable/editbox_background"
android:layout_height="wrap_content" android:layout_width="150px" >
</EditText>
<TextView android:id="@+id/TextView03" 
android:layout_marginTop="5dip"
android:layout_below="@id/new_password" 
android:layout_width="wrap_content" 
style="@style/textview_style"
android:layout_height="wrap_content" android:text="@string/confirm_password">
</TextView>
<EditText android:id="@+id/confpassword" 
android:layout_below="@id/TextView03" 
android:password="true" 
android:inputType="textPassword"
android:background="@android:drawable/editbox_background"
android:layout_marginTop="5dip"
android:layout_height="wrap_content"
android:layout_width="150px" android:singleLine="true">
</EditText>

<Button android:id="@+id/update" 
		android:layout_marginTop="10dip"
	android:layout_below="@+id/confpassword" 
	android:layout_width="100dip" 
	android:layout_height="40dip" 
	android:text="@string/button_update">
</Button>
<Button android:id="@+id/changepasswordhelp" 
android:layout_marginTop="10dip" 
style="@style/textview_btnstyle"
android:layout_width="95dip"
android:background="@drawable/textviewbutton"
android:layout_marginLeft="5dip" 
android:layout_height="30dip" 
android:text="@string/menu_help" 
android:layout_below="@+id/update"/>
</RelativeLayout></LinearLayout>

